--- a/go-micro/front-end/cmd/web/templates/footer.partial.gohtml
+++ b/go-micro/front-end/cmd/web/templates/footer.partial.gohtml
@@ -4,6 +4,8 @@
             <div class="col text-center">
                 <hr>
                 <small class="text-muted">Footer: кчау</small>
+                <small class="text-muted">Footer: кsdfsdfsdfsdfчау</small>
+                
             </div>
         </div>
     </div>
