ended up rewriting everything

--- a/go-micro/front-end/cmd/web/templates/footer.partial.gohtml
+++ b/go-micro/front-end/cmd/web/templates/footer.partial.gohtml
@@ -3,9 +3,7 @@
         <div class="row">
             <div class="col text-center">
                 <hr>
-                <small class="text-muted">Footer: кчау</small>
-                <small class="text-muted">Footer: кsdfsdfsdfsdfчау</small>
-                
+                <small class="text-muted">Copyright &copy; GoCode.ca</small>
             </div>
         </div>
     </div>
